--- a/css/home.css
+++ b/css/home.css
@@ -28,8 +28,13 @@ body {
 .row {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    margin-top: 1%;
     align-items: center;
+    justify-content: center;
+}
+
+.row#main {
+    width: 40%;
 }
 
 .row a {
@@ -54,17 +59,31 @@ body {
     transform: translateY(-7px);
 }
 
-.row a#orari {
+.row a:active {
+    background-color: rgb(255, 0, 0);
+    box-shadow: 0px 15px 20px rgba(71, 14, 14, 0.4) !important;
+    transform: translateY(-2px);
+}
+
+.row a#orari,
+.row a#home {
     width: 50%;
     margin-top: 5%;
     margin-bottom: 1%;
     background-color: rgb(128, 152, 212);
-    color: black;
+}
+
+.row a#orari:hover,
+.row a#home:hover {
+    background-color: rgb(189, 205, 245);
+    border-color: blanchedalmond;
+}
+
+.row a#orari:active,
+.row a#home:active {
+    background-color: rgb(0, 72, 255);
 }
 
 .row a#home {
-    width: 50%;
     margin-top: 2%;
-    background-color: rgb(128, 152, 212);
-    color: black;
 }
